TypedArray.prototype.slice should not throw if no arguments are provided https://bugs.webkit.org/show_bug.cgi?id=158044 <rdar://problem/26433280>

Reviewed by Geoffrey Garen.

We were throwing an exception if the TypedArray.prototype.slice function
was not provided arguments. This was wrong. Instead we should just assume
the first argument was 0.

* runtime/JSGenericTypedArrayViewPrototypeFunctions.h:
(JSC::genericTypedArrayViewProtoFuncSlice): Deleted.
* tests/stress/typedarray-slice.js:


Canonical link: https://commits.webkit.org/176171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201364 268f45cc-cd09-0410-ab3c-d52691b4dbfc